--- a/back_end/package.json
+++ b/back_end/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.3",
     "morgan": "^1.10.0",
-    "nodemon": "2.0.16"
+    "nodemon": "2.0.16",
+    "dotenv": "16.0.1"
   }
 }
