--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     #   - MONGO_USER_NAME=****
     #   - MONGO_USER_PASS=*****
     # creating the Docker Image
-    build: ./backend
+    build: /home/darshitgajjar/Darshit_Code/Darshit_Docker_Todo_App/react-Node-Js-Docker-Kubernetes-Demo-Project/back_end
 
     # context is basically used for where you're docker file is created
     # dockerfile special name is used if your dockerfile name is not ->DockerFile instead of other so that time you have specified
@@ -25,12 +25,14 @@ services:
       - "3200:3500"
   frontend:
     image: "react-front-end-app"
-    build: ./front_end
+    build: /home/darshitgajjar/Darshit_Code/Darshit_Docker_Todo_App/react-Node-Js-Docker-Kubernetes-Demo-Project/front_end
 
     volumes:
-      - /home/darshitgajjar/Darshit_Code/Darshit_Docker_Todo_App/react-Node-Js-Docker-Kubernetes-Demo-Project/front_end:/app
-      - /app/node_modules
-
+      - /home/darshitgajjar/Darshit_Code/Darshit_Docker_Todo_App/react-Node-Js-Docker-Kubernetes-Demo-Project/front_end/src:/app/src
+    stdin_open: true
+    tty: true
+    depends_on:
+      - backend
     ports:
       - "3000:3000"
 # volumes:
